# aop-kg

./: .gitignore  README.md  pyproject.toml
data/aopwiki/converted/: biological_terms.json  chemicals.json  nodes.csv  stressors.json  summary.json  taxonomies.json  vendor_specific.jsonl
data/aopwiki/tsv/: aop_ke_ec.tsv  aop_ke_ker.tsv  aop_ke_mie_ao.tsv
src/aop_kg/: __init__.py
src/aop_kg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aop_kg/aopwiki/: __init__.py  convert_xml.py  visualize_graph.py
